--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "jpm": "^1.0.7",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.22",
+    "mocha": "^2.4.5",
     "webpack": "^1.13.0",
     "webpack-notifier": "^1.3.0"
   },
