--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "addon": "npm run build && jpm run"
   },
   "devDependencies": {
+    "cpx": "^1.3.1",
     "jpm": "^1.0.7",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
