--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack -w",
-    "addon": "npm run build && jpm run"
+    "addon": "cp src/sidebar.html data/sidebar.html && npm run build && jpm run"
   },
   "devDependencies": {
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-react": "^6.5.0",
     "cpx": "^1.3.1",
     "jpm": "^1.0.7",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "mocha": "^2.4.5",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "webpack": "^1.13.0",
     "webpack-notifier": "^1.3.0"
   },
