added jareds parser

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "jsdom": "^9.0.0",
+    "page-metadata-parser": "^0.2.0",
     "url": "^0.11.0",
     "url-parse": "^1.1.1"
   }
