--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jpm": "^1.0.7",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
+    "live-server": "^1.0.0",
     "mocha": "^2.4.5",
     "npm-run-all": "^2.3.0",
     "react": "^15.1.0",
