--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "scripts": {
     "build": "webpack",
     "start:js": "webpack -w",
-    "start:css": "cpx src/main.css data -w",
-    "start:html": "cpx src/sidebar.html data -w",
+    "start:static": "cpx src/static/**/* data -w",
     "start:server": "live-server data --port=1936 --no-browser",
     "start": "npm-run-all --parallel start:*",
     "addon": "npm run build && jpm run"
