--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "test": "test"
   },
   "scripts": {
-    "build": "webpack && cpx src/static/**/* data && node bin/replace-html",
+    "build": "webpack && cpx src/static/**/* extension/ && node bin/replace-html",
     "start:js": "webpack -w",
-    "start:static": "cpx src/static/**/* data -w",
-    "start:server": "live-server data --port=1936 --no-browser",
+    "start:static": "cpx src/static/**/* extension/ -w",
+    "start:server": "live-server extension/ --port=1936 --no-browser",
     "start": "npm-run-all --parallel start:*",
-    "addon": "jpm run -b nightly",
-    "sign": "npm run build && jpm sign --api-key ${AMO_API_KEY} --api-secret ${AMO_API_SECRET}"
+    "addon": "web-ext run -s extension/",
+    "addon:nightly": "web-ext run -s extension/ -f nightly",
+    "sign": "npm run build && web-ext sign -s extension/ --api-key ${AMO_API_KEY} --api-secret ${AMO_API_SECRET}"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
     "cpx": "^1.3.1",
-    "jpm": "^1.0.7",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "live-server": "^1.0.0",
@@ -38,6 +38,7 @@
     "npm-run-all": "^2.3.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "web-ext": "^1.9.0",
     "webpack": "^1.13.0",
     "webpack-notifier": "^1.3.0"
   },
